--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-utils",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A plugin for Aurelia based projects.",
   "keywords": [
     "aurelia",
@@ -25,14 +25,15 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
-    "del": "^2.2.0",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
-    "gulp-jasmine": "^2.3.0",
-    "gulp-tsb": "^1.10.4",
+    "gulp-jasmine": "^2.4.0",
+    "gulp-typescript": "^2.13.6",
     "jasmine": "^2.4.1",
-    "jasmine-reporters": "^2.1.1",
-    "run-sequence": "^1.2.1",
-    "typescript": "^1.8.10",
+    "jasmine-reporters": "^2.2.0",
+    "merge2": "^1.0.2",
+    "run-sequence": "^1.2.2",
+    "typescript": "^2.0.0-dev.20160707",
     "vinyl-paths": "^2.1.0"
   }
 }
